2007-04-05  Dan Williams  <dcbw@redhat.com>

	* src/NetworkManager.c
		- (fixup_hostname): ensure local hostname is first; write to a temp file
			then atomically rename to /etc/hosts

2007-04-04  Dan Williams  <dcbw@redhat.com>

	* src/nm-device-802-11-mesh-olpc.c
		- convert nm_debug logging to nm_info so it shows up in /var/log/messages

2007-04-04  Dan Williams  <dcbw@redhat.com>

	* src/nm-device-802-11-mesh-olpc.c
		- (mpp_discovery_receive_cb): clean up right after a successful response
			so only one MPP response is ever processed

2007-04-04  Dan Williams  <dcbw@redhat.com>

	* src/nm-device-802-11-mesh-olpc.c
		- (mpp_discovery_receive_cb): accept only one nameserver in MPP response

2007-04-04  Dan Williams  <dcbw@redhat.com>

	* src/nm-dbus-nmi.c
		- (nm_dbus_get_user_key_for_network_cb): accept security objects
			wrapped in structs, which later versions of python bindings pass back

2007-04-03  Dan Williams  <dcbw@redhat.com>

	* src/nm-device-802-11-wireless.c
		- (supplicant_exec): don't capture and redirect supplicant output;
			tell wpa_supplicant to use syslog instead
		- (supplicant_log_stdout, supplicant_log_stdout_done): removed

2007-04-03  Dan Williams  <dcbw@redhat.com>

	* src/NetworkManager.c
		- (fixup_hostname): restart avahi after hostname changes so it notices
			them.  Grr.

2007-04-03  Dan Williams  <dcbw@redhat.com>

	* src/nm-device-802-11-wireless.c
		- (supplicant_exec): don't capture and redirect supplicant output,
			may be causing problems with wpa_supplicant.  Instead, assume
			that wpa_supplicant is putting its debug output somewhere accessible
		- (real_act_stage2_config): start monitoring supplicant state earlier
			to catch fast associations

2007-04-03  Dan Williams  <dcbw@redhat.com>

	* src/nm-device-802-11-mesh-olpc.
		- (real_act_stage6_post_ip_start): only add a route to the anycast IP
			address, not to its whole subnet

2007-04-01  Dan Williams  <dcbw@redhat.com>

	* src/nm-device-802-11-mesh-olpc.c